--- a/_praktikum3/praktikum3.html
+++ b/_praktikum3/praktikum3.html
@@ -97,12 +97,19 @@ str(andmed)</code></pre>
 <h2 number="1.2"><span class="header-section-number">1.2</span> Veergude ja ridade eraldamine andmestikust: tõeväärtusvektori abil</h2>
 <p>Tõeväärtusvektoreid on väga mugav kasutada nn filtritena. Nimelt on <code>data.frame</code> puhul võimalik ridu (ja ka veerge!) eraldada mitte ainult indeksi või -nime järgi, vaid ka tõeväärtusvektori abil. Kui eraldada ridu, siis vastav tõeväärtusvektor peab olema sama pikk kui on andmestikus ridu ning väärtused selles vektoris näitavad, kas vastavat rida kasutada (<code>TRUE</code>) või mitte (<code>FALSE</code>). Tõeväärtusvektorite kombineerimisel saab andmestikust väga spetsiifilisi alamhulki eraldada.</p>
 <pre class="r"><code># eraldame kõik read, kus SEX == &quot;Male&quot; ning salvestame selle uueks objektiks
-mehed &lt;- andmed[andmed$SEX == &quot;Male&quot;, ]  
-
+mehed &lt;- andmed[andmed$SEX == &quot;Male&quot;, ]
 # moodustame kaks filtritunnust ja kombineerime need alagrupi valikuks
 filter_kod &lt;- andmed$CIT == &quot;Not a citizen of the U.S.&quot;  # mittekodanikud
 filter_vanus &lt;- andmed$AGEP &gt;= 80                        # vähemalt 80 aastased
 alamandmestik &lt;- andmed[filter_kod &amp; filter_vanus, ]   # Ära unusta: [read, veerud]</code></pre>
+<p>Puuduvate väärtuste <code>NA</code> esinemisel andmestikus, tuleb alamandmestike eraldamisel olla ettevaatlik. Kui filtrina kasutatava tõenäosusvektori väärtus on mõnes kohas <code>NA</code>, siis tekib alamandmestiku rida mis sisaldab ainult puuduvaid väärtuseid. Puuduvate väärtuste vältimiseks võib <code>==</code> asemel kasutada <code>%in%</code>, näiteks</p>
+<pre class="r"><code>
+alamandmestik = andmed[andmed$MAR == "Divorced" & andmed$COW == "Unemployed",]
+nrow(alamandmestik) # 87, millest 85 on read mis sisaldavad ainult NA väärtusi
+
+alamandmestik = andmed[andmed$MAR %in% "Divorced" & andmed$COW %in% "Unemployed",]
+nrow(alamandmestik) # 2
+</code></pre>
 <p>Üks näide ka tõeväärtusvektori abil veergude eraldamise kohta: valime kõik need veerud, mille päis algab sõnega <em>MAR</em> (tunnused, mis seotud abieluga)</p>
 <pre class="r"><code>onMAR &lt;- startsWith(names(andmed), &quot;MAR&quot;)
 # või 
